# xentu

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md
include/xentu/: application.hpp  entrypoint.hpp  xentu.hpp
include/xentu/core/: application.hpp  entrypoint.hpp
include/xentu/debug/: assert.hpp  debug_utils.hpp  logger.hpp
include/xentu/event/: event.hpp  event_category.hpp  event_dispatcher.hpp  event_listener.hpp  event_type.hpp
include/xentu/render/: mesh.hpp  window.hpp  window_properties.hpp
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
src/: application.cpp  event.cpp  event_dispatcher.cpp  event_listener.cpp  logger.cpp  window.cpp
test/: CMakeLists.txt  bromine.cpp  dog.cpp  dunno.cpp  tests.cpp
